Make sure new "Watch Party" button is visible in all contexts

--- a/source/declutter.scss
+++ b/source/declutter.scss
@@ -10,17 +10,34 @@ img[src*='Device_Stripe'], // New
 // (because it's also annoying and can't be dismissed)
 .av-hql-container, // Old
 .av-detail-section article .avu-clearfix, // February 2020
-[data-automation-id='hero-quick-promo'], // September 2020
-
-// Hide weird bar below metadata
-// (because I don't want to "Share", "Send us feedback" or "Get Help")
-.av-detail-bottom-bar, // Old
-.dv-dp-node-bottom, // New
-
-// Hide "More purchase options" link
-// (because I don't want to purchase things I can watch for free)
-#dv-action-box [data-aiv-modal*='more-purchase-options'], // Entire series
-.js-episode-offers, // Single episode
-[data-automation-id='other-formats'] // New
+[data-automation-id='hero-quick-promo'] // September 2020
 
 { display: none !important; }
+
+// Classes generated by https://github.com/css-modules/css-modules
+// Original class names found through global search in Chrome DevTools
+$bottomBar: '._36oYY0';
+$termsAndConditions: '._2EMb_K';
+$iconsAndFeedback: '._1oJWj_';
+
+#{$bottomBar} {
+  // Put actions (like "Watch Party") above TOC text
+  flex-direction: column-reverse !important;
+  align-items: start !important;
+
+  #{$termsAndConditions} {
+    // Limit width of TOC text
+    max-width: 620px !important;
+    margin-bottom: 0 !important;
+  }
+
+  #{$termsAndConditions}, #{$iconsAndFeedback} {
+    // Reduce opacity of actions and TOC text unless hovered
+    filter: opacity(60%) !important;
+    transition: filter 150ms ease-in-out !important;
+
+    &:hover {
+      filter: none !important;
+    }
+  }
+}
